<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/image_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/front" />

    <ImageView
        android:id="@+id/image_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/bottom_small" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="525dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_top">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="30sp"
            android:textColor="@color/red"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/email"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/red"
                android:drawableStart="@drawable/baseline_email_24"
                android:background="@drawable/textfield_shape"
                android:padding="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/red"
                android:drawableStart="@drawable/baseline_email_24"
                android:background="@drawable/textfield_shape"
                android:padding="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp" />

        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or continue with"

            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="#3F51B5"
            android:textStyle="bold" />
        <Button

            android:id="@+id/googlesingin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10dp"
            android:background="@drawable/signup_button"
            android:drawableStart="@drawable/googleicon"
            android:text="continue with google" />



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
