<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_red"
    tools:context=".MainActivity">



        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"

            app:srcCompat="@drawable/front" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/bottom_small" />

        <Button
            android:id="@+id/signin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"

            android:text="@string/sign_in"
            android:textColor="@color/white"

            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/signup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="32dp"
            android:background="@drawable/signup_button"
            android:text="@string/sign_up"
            android:textColor="@color/red"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/signin"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/signin"
            app:layout_constraintTop_toBottomOf="@+id/signin"
            app:layout_constraintVertical_bias="0.19" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="82dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22000003"/>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/signup"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="@+id/signup"
            app:layout_constraintTop_toBottomOf="@+id/signup"
            app:layout_constraintVertical_bias="0.0">

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:background="@color/white" /> <!-- This represents the vertical line -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="OR continue with"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:background="@color/white" /> <!-- This represents the vertical line -->

        </LinearLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="148dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.0">

                <Button
                    android:id="@+id/googlesingin"
                    android:layout_width="wrap_content"
                    android:paddingEnd="10dp"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/signup_button"
                    android:drawableStart="@drawable/googleicon"
                    android:text="continue with google" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>






